// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartialDateUi renders without errors 1`] = `
<DocumentFragment>
  <div
    class="grid grid-cols-[fit-content(40%)_1fr] w-full gap-1"
  >
    <label
      class="print:hidden"
    >
      <span
        class="sr-only"
      >
        Date Precision
      </span>
      <select
        class="not-touched w-full pr-5 bg-right cursor-pointer"
      >
        <option
          value="full"
        >
          Full Date
        </option>
        <option
          value="month-year"
        >
          Mon / Year
        </option>
        <option
          value="year"
        >
          Year
        </option>
      </select>
    </label>
    <div
      class="flex"
    >
      <input
        class="not-touched w-full"
        max="9999-12-31"
        placeholder="MM/DD/YYYY"
        type="date"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PartialDateUi renders without errors 2`] = `
<DocumentFragment>
  <div
    class=" w-full gap-1"
  >
    <div
      class="flex"
    >
      <input
        class="not-touched w-full"
        placeholder="MM/YYYY"
        type="month"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PartialDateUi renders without errors 3`] = `
<DocumentFragment>
  <div
    class=" w-full gap-1"
  >
    <div
      class="flex"
    >
      <input
        class="not-touched w-full"
        max="9999"
        min="1"
        placeholder="YYYY"
        step="1"
        type="number"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
